--- a/src/stv-tab.html
+++ b/src/stv-tab.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <dom-module id="stv-tab">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
-        :host {
+         :host {
             display: block;
             position: relative;
             box-sizing: border-box;
@@ -55,7 +55,7 @@
             height: calc(100% - 45px);
         }
 
-        ::content .tabContainer {
+         ::content .tabContainer {
             position: relative;
             height: 100%;
         }
@@ -111,14 +111,21 @@
             },
             handleOptions: function(e) {
                 this.option = e.currentTarget.dataset.value;
+                var visibleTab;
                 for (var i = 0; i < this.tabs.length; i++) {
                     var t = this.tabs[i];
                     if (t.dataset.tab == this.option) {
                         t.removeAttribute('hidden', "");
+                        visibleTab = t;
                     } else {
                         t.setAttribute('hidden', "");
                     }
                 }
+                this.fire('tab-change', {
+                    name: this.option,
+                    tab.visibleTab,
+                    tabs: this.tabs
+                })
             },
             computeOptions: function(option, value) {
                 return option === value;
