Added tab change event.

--- a/src/stv-tab.html
+++ b/src/stv-tab.html
@@ -123,7 +123,7 @@
                 }
                 this.fire('tab-change', {
                     name: this.option,
-                    tab.visibleTab,
+                    tab: visibleTab,
                     tabs: this.tabs
                 })
             },
