--- a/src/stv-tab.html
+++ b/src/stv-tab.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../iron-resizable-behavior/iron-resizable-behavior.html">
 <dom-module id="stv-tab">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
          :host {
@@ -77,6 +78,9 @@
     <script>
         Polymer({
             is: "stv-tab",
+            behaviors: [
+                Polymer.IronResizableBehavior
+            ],
             properties: {
                 option: {
                     type: String,
@@ -94,6 +98,12 @@
                         return [];
                     }
                 },
+            },
+            listeners: {
+                'iron-resize': '_onIronResize'
+            },
+            _onIronResize: function() {
+
             },
             ready: function() {
                 var tabNames = [];
@@ -124,8 +134,9 @@
                 this.fire('tab-change', {
                     name: this.option,
                     tab: visibleTab,
+                    hidden: (stv.utils.closest(visibleTab) != null),
                     tabs: this.tabs
-                })
+                });
             },
             computeOptions: function(option, value) {
                 return option === value;
