--- a/src/file/stv-file-upload.html
+++ b/src/file/stv-file-upload.html
@@ -2,7 +2,6 @@
 <link rel="import" href="../../../iron-flex-layout/iron-flex-layout-classes.html">
 
 <link rel="import" href="../stv-dialog/stv-dialog.html">
-
 <link rel="import" href="stv-file-bioformat.html">
 <link rel="import" href="../validator/stv-validator.html">
 
@@ -54,6 +53,7 @@
             width: 200px;
             border: 1px solid var(--divider-color);
             background-color: var(--text-primary-color);
+            overflow-y: auto;
         }
 
         #filename {
