--- a/src/file/stv-folder-tree-item.html
+++ b/src/file/stv-folder-tree-item.html
@@ -3,7 +3,7 @@
 
 <dom-module id="stv-folder-tree-item">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
-        :host {
+         :host {
             position: relative;
             display: block;
             box-sizing: border-box;
@@ -20,7 +20,7 @@
             text-overflow: clip;*/
         }
 
-        .main:hover > * {
+        .main:hover>* {
             background-color: var(--hover-color)
         }
 
@@ -38,6 +38,14 @@
             width: 20px;
             text-align: center;
             content: '\f07c';
+        }
+
+        .job:before {
+            font-family: "FontAwesome";
+            display: inline-block;
+            width: 20px;
+            text-align: center;
+            content: '\f0c3';
         }
 
         .arrow:before {
@@ -72,7 +80,7 @@
     <template>
         <div class="main horizontal layout stv-nosel">
             <div class="arrow" empty$="{{isEmpty(file.f)}}" open$="{{file.open}}" on-click="handleArrowClick"></div>
-            <div id="name" class$="{{computeClass(file.open)}}" on-click="handleClick" on-dblclick="handleDblclick">{{computeName(file.n)}}</div>
+            <div id="name" class$="{{computeClass(file)}}" on-click="handleClick" on-dblclick="handleDblclick">{{computeName(file.n)}}</div>
         </div>
         <div style="margin-left:7px;" hidden$="{{!file.open}}">
             <template is="dom-repeat" items="{{fileItems}}" as="f">
@@ -177,8 +185,10 @@
                 });
                 this.fire('need-refresh');
             },
-            computeClass: function(open) {
-                if (open == true) {
+            computeClass: function(file) {
+                if (file.j) {
+                    return "job name flex"
+                } else if (file.open == true) {
                     return "fOpen name flex"
                 } else {
                     return "folder name flex"
