--- a/src/file/stv-folder-list-item.html
+++ b/src/file/stv-folder-list-item.html
@@ -17,7 +17,7 @@
         }
 
         .col {
-            text-align: center;
+            /*text-align: center;*/
         }
 
         .filename {
@@ -59,7 +59,7 @@
     <template>
         <template is="dom-if" if="{{computeViewMode(viewMode, 'list')}}">
             <div id="list" class="horizontal layout">
-                <div id="name" class="horizontal layout" style$="width:calc(100% - {{colSumW}}px);">
+                <div hidden="{{computeFileColumn(hideFileColumn,file)}}" id="name" class="horizontal layout" style$="width:calc(100% - {{computeFileWidth(file,colSumW)}}px);">
                     <div class="icon"><i class$="{{computeIcon(file)}}"></i></div>
                     <template is="dom-if" if="{{hasJob(file)}}">
                         <div class="icon"><i class$="{{computeJobIcon(file.job)}}"></i></div>
@@ -67,6 +67,7 @@
                     <div class="filename" title$="{{file.name}}">{{file.name}}</div>
                 </div>
                 <template is="dom-repeat" items="{{columns}}" as="column">
+                    <div class="icon"><i class$="{{computeColumnIcon(column, file)}}"></i></div>
                     <div style$="width:{{column.width}}px;" class="col" title="{{computeColumn(column,file)}}">{{computeColumn(column,file)}}</div>
                 </template>
             </div>
@@ -95,6 +96,11 @@
             columns: {
                 type: Array,
                 observer: 'columnsChanged'
+            },
+            hideFileColumn: {
+                type: Boolean,
+                value: false,
+                reflectToAttribute: true
             },
             colSumW: {
                 type: Number,
@@ -161,6 +167,29 @@
                 return file[column.name];
             } else {
                 return column.formula(file);
+            }
+        },
+        computeFileColumn: function(hideFileColumn, file) {
+            if (file.type == 'FOLDER') {
+                return false;
+            } else {
+                return hideFileColumn;
+            }
+        },
+        computeFileWidth: function(file, colSumW) {
+            if (file.type == 'FOLDER') {
+                return 0;
+            } else {
+                return colSumW;
+            }
+        },
+        computeColumnIcon: function(column, file) {
+            if (file.type == 'FOLDER') {
+                return '';
+            } else if (column.icon != null) {
+                return 'fa ' + column.icon;
+            } else {
+                return '';
             }
         }
     });
