--- a/src/stv-dialog/stv-dialog.html
+++ b/src/stv-dialog/stv-dialog.html
@@ -120,6 +120,20 @@ with a z-index above this value will not be blocked.
                 text-align: center;
             }
 
+            input[type=text] {
+                transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+                box-shadow: none;
+            }
+
+            input[type=text]:-moz-ui-invalid {
+                box-shadow: none;
+            }
+
+            input[type=text]:focus {
+                border-color: #66afe9;
+                box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
+            }
+
             .buttons>div:hover {
                 background-color: #f8f8f8;
                 box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.3);
@@ -167,12 +181,12 @@ with a z-index above this value will not be blocked.
                         {{message}}
                     </div>
                     <div class="input-wrapper">
-                        <input type="text" id="text" hidden value$="{{inputValue}}">
+                        <input type="text" id="text" hidden value$="{{defaultText}}">
                     </div>
                 </div>
                 <div id="buttonsHolder" class="buttons">
-                    <div id="cancel" on-click="_handleCancel" hidden>Cancel</div>
-                    <div id="ok" on-click="_handleOk"></div>
+                    <div id="cancel" on-click="_handleCancel" hidden>{{cancelText}}</div>
+                    <div id="ok" on-click="_handleOk">{{okText}}</div>
                 </div>
             </div>
         </div>
@@ -181,7 +195,17 @@ with a z-index above this value will not be blocked.
     <script>
         StvDialog = Polymer({
             is: "stv-dialog",
-
+            factoryImpl: function(args) {
+                if (args instanceof Object) {
+                    for (var prop in args) {
+                        if (hasOwnProperty.call(args, prop)) {
+                            if (args[prop] != null) {
+                                this.set(prop, args[prop])
+                            }
+                        }
+                    }
+                }
+            },
             properties: {
 
                 hidden: {
@@ -196,7 +220,20 @@ with a z-index above this value will not be blocked.
                     type: String
                 },
 
-                _hasParent: Boolean
+                _hasParent: Boolean,
+
+                cancelText: {
+                    type: String,
+                    value: 'Cancel'
+                },
+                okText: {
+                    type: String,
+                    value: 'OK'
+                },
+                defaultText: {
+                    type: String,
+                    value: ''
+                }
             },
 
             ready: function() {
@@ -245,8 +282,7 @@ with a z-index above this value will not be blocked.
              *
              * @param {string} confirmBtnMessage The message that will be displayed inside the ok button
              */
-            _setElement: function(confirmBtnMessage) {
-                this.$.ok.textContent = confirmBtnMessage;
+            _setElement: function() {
                 if (this._mode === "prompt") {
                     this.$.text.removeAttribute("hidden");
                     //TODO: Fix -> The user needs to press enter for the focus to work.
@@ -287,7 +323,7 @@ with a z-index above this value will not be blocked.
                     document.body.appendChild(this)
                 }
                 this._mode = "confirm";
-                this._setElement("OK");
+                this._setElement();
                 this.message = msg;
                 this.hidden = false;
                 this._callback = cb;
@@ -305,7 +341,7 @@ with a z-index above this value will not be blocked.
                     document.body.appendChild(this)
                 }
                 this._mode = "alert";
-                this._setElement("OK");
+                this._setElement();
                 this.message = msg;
                 this.hidden = false;
                 this._callback = cb;
@@ -324,7 +360,7 @@ with a z-index above this value will not be blocked.
                     document.body.appendChild(this)
                 }
                 this._mode = "prompt";
-                this._setElement("OK");
+                this._setElement();
                 this.message = msg;
                 this.hidden = false;
                 this._callback = cb;
